test/e2e/testdata/wasm-oci.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-with-oci-wasm-source
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  hostnames: ["www.example.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /wasm-oci
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-without-wasm
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  hostnames: ["www.example.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /no-wasm
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
# EnvoyExtensionPolicy for OCI Wasm source test is created in the test code because we can't get the OCI registry's LB
# address in advance.
